test/corpus/expressions.txt
===========
Expressions
===========

version 1.1

workflow Test {
    # assignment

    Boolean t = true
    Boolean f = false

    Int i1 = 100
    Int i2 = -1
    Int i3 = +1
    Int i4 = 0xFFFF
    Int i5 = 0777

    Float f1 = 1e5
    Float f2 = .123
    Float f3 = .1e2
    Float f4 = 1.2
    Float f5 = 1.2e5
    Float f6 = +1.0
    Float f7 = -1.0

    Array[Int] a0 = []
    Array[Int] a1 = [1, 2, 3]

    Map[Int, Boolean] m0 = {}
    Map[Int, Boolean] m1 = {
        1: true,
        2: false
    }

    Pair[Int, Float] p1 = (-1, 2.0)

    Object obj0 = object {}
    Object obj1 = object {
        a: true,
        b: 1,
        c: -1.0
    }

    Foo foo = Foo {
        a: true,
        b: 1,
        c: -1.0
    }

    # binary operations

    Int bin1 = 1 + 2 + 3
    Int bin2 = 1 + 2 * 3
    Int bin3 = -(1 + 2) * 3
    Float bin4 = bin2 / bin3

    Boolean bool1 = true && false 
    Boolean bool2 = 1 < 2
    Boolean bool3 = 1 >= 2 || 3 == 4
    Boolean bool4 = !(true || false)

    Array[Int?] a2 = [1, None]
    Int? i = a2[0]
    Int j = select_first(a2)
    Int k = select_first([a2[0]])
    Boolean foo_a = foo.a
    Int x = if 1 > 2 then 0 else 1
}

---

(document
    version: (version
        identifier: (float)
    )
    body: (document_body
        (workflow
            name: (identifier)
            body: (workflow_body
                (comment)
                (bound_declaration
                    type: (boolean_type)
                    name: (identifier)
                    expression: (true)
                )
                (bound_declaration
                    type: (boolean_type)
                    name: (identifier)
                    expression: (false)
                )
                (bound_declaration
                    type: (int_type)
                    name: (identifier)
                    expression: (dec_int)
                )
                (bound_declaration
                    type: (int_type)
                    name: (identifier)
                    expression: (dec_int)
                )
                (bound_declaration
                    type: (int_type)
                    name: (identifier)
                    expression: (dec_int)
                )
                (bound_declaration
                    type: (int_type)
                    name: (identifier)
                    expression: (hex_int)
                )
                (bound_declaration
                    type: (int_type)
                    name: (identifier)
                    expression: (oct_int)
                )
                (bound_declaration
                    type: (float_type)
                    name: (identifier)
                    expression: (float)
                )
                (bound_declaration
                    type: (float_type)
                    name: (identifier)
                    expression: (float)
                )
                (bound_declaration
                    type: (float_type)
                    name: (identifier)
                    expression: (float)
                )
                (bound_declaration
                    type: (float_type)
                    name: (identifier)
                    expression: (float)
                )
                (bound_declaration
                    type: (float_type)
                    name: (identifier)
                    expression: (float)
                )
                (bound_declaration
                    type: (float_type)
                    name: (identifier)
                    expression: (float)
                )
                (bound_declaration
                    type: (float_type)
                    name: (identifier)
                    expression: (float)
                )
                (bound_declaration
                    type: (array_type
                        type: (int_type)
                    )
                    name: (identifier)
                    expression: (array
                        elements: (array_elements)
                    )   
                )
                (bound_declaration
                    type: (array_type
                        type: (int_type)
                    )
                    name: (identifier)
                    expression: (array
                        elements: (array_elements
                            (dec_int)
                            (dec_int)
                            (dec_int)
                        )
                    )   
                )
                (bound_declaration
                    type: (map_type
                        key: (int_type)
                        value: (boolean_type)
                    )        
                    name: (identifier)
                    expression: (map
                        entries: (map_entries)
                    )
                )
                (bound_declaration
                    type: (map_type
                        key: (int_type)
                        value: (boolean_type)
                    )
                    name: (identifier)
                    expression: (map
                        entries: (map_entries
                            (map_entry
                                key: (dec_int)
                                value: (true)
                            )
                            (map_entry
                                key: (dec_int)
                                value: (false)
                            )
                        )
                    )   
                )
                (bound_declaration
                    type: (pair_type
                        left: (int_type)
                        right: (float_type)
                    )
                    name: (identifier)
                    expression: (pair
                        left: (dec_int)
                        right: (float)
                    )
                )
                (bound_declaration
                    type: (object_type)
                    name: (identifier)
                    expression: (object
                        fields: (object_fields)
                    )
                )
                (bound_declaration
                    type: (object_type)
                    name: (identifier)
                    expression: (object
                        fields: (object_fields
                            (object_field
                                name: (identifier)
                                expression: (true)
                            )
                            (object_field
                                name: (identifier)
                                expression: (dec_int)
                            )
                            (object_field
                                name: (identifier)
                                expression: (float)
                            )
                        )
                    )
                )
                (bound_declaration
                    type: (user_type 
                        name: (identifier)
                    )
                    name: (identifier)
                    expression: (object
                        type: (identifier)
                        fields: (object_fields
                            (object_field
                                name: (identifier)
                                expression: (true)
                            )
                            (object_field
                                name: (identifier)
                                expression: (dec_int)
                            )
                            (object_field
                                name: (identifier)
                                expression: (float)
                            )
                        )
                    )
                )
                (comment)
                (bound_declaration
                    type: (int_type)
                    name: (identifier)
                    expression: (binary_operator
                        left: (binary_operator
                            left: (dec_int)
                            right: (dec_int)
                        )
                        right: (dec_int)
                    )
                )
                (bound_declaration
                    type: (int_type)
                    name: (identifier)
                    expression: (binary_operator
                        left: (dec_int)
                        right: (binary_operator
                            left: (dec_int)
                            right: (dec_int)
                        )
                    )
                )
                (bound_declaration
                    type: (int_type)
                    name: (identifier)
                    expression: (binary_operator
                        left: (unary_operator
                            expression: (group_expression
                                expression: (binary_operator
                                    left: (dec_int)
                                    right: (dec_int)
                                )
                            )
                        )
                        right: (dec_int)
                    )
                )
                (bound_declaration
                    type: (float_type)
                    name: (identifier)
                    expression: (binary_operator
                        left: (identifier)
                        right: (identifier)
                    )
                )
                (bound_declaration
                    type: (boolean_type)
                    name: (identifier)
                    expression: (and_operator
                        left: (true)
                        right: (false)
                    )
                )
                (bound_declaration
                    type: (boolean_type)
                    name: (identifier)
                    expression: (comparison_operator
                        left: (dec_int)
                        right: (dec_int)
                    )
                )
                (bound_declaration
                    type: (boolean_type)
                    name: (identifier)
                    expression: (or_operator
                        left: (comparison_operator
                            left: (dec_int)
                            right: (dec_int)
                        )
                        right: (comparison_operator
                            left: (dec_int)
                            right: (dec_int)
                        )
                    )
                )
                (bound_declaration
                    type: (boolean_type)
                    name: (identifier)
                    expression: (not_operator
                        expression: (group_expression
                            expression: (or_operator
                                left: (true)
                                right: (false)
                            )
                        )
                    )
                )
                (bound_declaration
                    type: (array_type
                        type: (optional_type
                            type: (int_type)
                        )
                    )    
                    name: (identifier)
                    expression: (array
                        elements: (array_elements
                            (dec_int)
                            (none)
                        )
                    )   
                )
                (bound_declaration
                    type: (optional_type
                        type: (int_type)
                    )
                    name: (identifier)
                    expression: (index_expression
                        collection: (identifier)
                        index: (dec_int)
                    )
                )
                (bound_declaration
                    type: (int_type)
                    name: (identifier)
                    expression: (apply_expression
                        name: (identifier)
                        arguments: (argument_list
                            (identifier)
                        )
                    )
                )
                (bound_declaration
                    type: (int_type)
                    name: (identifier)
                    expression: (apply_expression
                        name: (identifier)
                        arguments: (argument_list
                            (array
                                elements: (array_elements
                                    (index_expression
                                        collection: (identifier)
                                        index: (dec_int)
                                    )
                                )
                            )
                        )
                    )
                )
                (bound_declaration
                    type: (boolean_type)
                    name: (identifier)
                    expression: (field_expression
                        object: (identifier)
                        name: (identifier)
                    )
                )
                (bound_declaration
                    type: (int_type)
                    name: (identifier)
                    expression: (ternary_expression
                        condition: (comparison_operator
                            left: (dec_int)
                            right: (dec_int)
                        )
                        true: (dec_int)
                        false: (dec_int)
                    )
                )       
            )
        )
    )
)